--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
     "express-flash": "0.0.2",
+    "express-rate-limit": "^5.3.0",
     "express-session": "^1.15.6",
     "flash": "^1.1.0",
     "libxmljs": "^0.19.1",
